расширяем интеграцию
